# 1-dj-Sum-Tj

Branch/: CMakeLists.txt  Mem.h  Problem.cpp  Problem.h  config.ini  h.h  main.cpp
Branch/tests/: 0.in  0.out  1.in  1.out  2.out  3.in
